[package]
name = "bdcs"
version = "0.2.0"
authors = ["Brian C. Lane <bcl@redhat.com>"]
license = "GPL-3.0"

[[bin]]
name = "bdcs-api-server"
path = "src/main.rs"

[dependencies]
clap = "2.*"
flate2 = "0.*"
glob = "0.*"
hyper = "0.*"
lazy_static = "0.2.*"
r2d2 = "0.*"
r2d2_sqlite = "0.*"
rocket = "0.1.*"
rocket_codegen = "0.1.*"
rocket_contrib = "0.1.*"
rusqlite = "0.7.*"
rustc-serialize = "0.3.*"
serde = "=0.8.21"
serde_json = "0.8.*"
serde_derive = "=0.8.21"
slog = "1.3.*"
slog-json = "1.2.*"
slog-scope = "0.2.*"
slog-stream = "1.2.*"
slog-term = "1.3.*"
# Note that toml cannot be switched to serde due to rocket's use of toml with rustc-serialize
toml = "0.2.*"
unicase = "1.*"

[dev-dependencies]
rocket = { version = "0.1.*", features = ["testing"] }
