[package]
name = "bdcs"
version = "0.5.0"
authors = ["Brian C. Lane <bcl@redhat.com>"]
license = "GPL-3.0"

[[bin]]
name = "bdcs-api-server"
path = "src/bin/bdcs-api-server.rs"

[[bin]]
name = "depclose"
path = "src/bin/depclose.rs"

[dependencies]
chrono = "0.3.*"
clap = "2.*"
flate2 = "0.*"
git2 = "0.6.*"
glob = "0.*"
hyper = "0.10.*"
itertools = "0.5.9"
lazy_static = "0.2.*"
r2d2 = "0.7.*"
r2d2_sqlite = "0.1.*"
regex = "0.2.*"
rocket = "0.2.*"
rocket_codegen = "0.2.*"
rocket_contrib = "0.2.*"
rusqlite = "0.11.*"
semver = "0.6.*"
serde = "0.9.*"
serde_derive = "0.9.*"
serde_json = "0.9.*"
slog = "1.3.*"
slog-json = "1.2.*"
slog-scope = "0.2.*"
slog-stream = "1.2.*"
slog-term = "1.3.*"
toml = "0.3.1"
unicase = "1.*"

[dev-dependencies]
rocket = { version = "0.2.*", features = ["testing"] }
pretty_assertions = "0.1.*"

[features]
# Treat warnings as build errors. Use for testing and CI!
strict = []
